css/partials/_navbar.css
.navbar {
  position: static;
  min-height: 0;
  margin-bottom: 0;
  border: 0;
  border-radius: 0;
}

.navbar-nav {
  float: right;  
  margin: 0;
}

.navbar-header {
  width: 100%;
  padding: 0 25px;
}

.navbar-name {
  float: left;
}

.navbar-nav > li {
  display: inline-block;
}

.navbar a,
.navbar-nav > li > a {
  color: #fff;
  font-size: 22px;
  font-weight: 600;
  line-height: inherit;
  margin-top: 25px;
  padding: 0;
}

.navbar-nav > li > a {
  display: inline-block;
  margin-left: 22px;
}

.navbar-nav > li > a:focus,
.navbar-nav > li > a:hover {
  background-color: inherit;
}

.navbar-nav > li > a > span {
  display: none;
} 

.navbar-nav > li > a > i {
  display: inherit;
}

@media (min-width: 480px) {
  .navbar-nav > li > a {
    margin-left: 40px;
  }
}

@media (min-width: 768px) {
  .navbar-nav > li > a > span {
    display: inherit;
  } 

  .navbar-nav > li > a > i {
    display: none;
  }
}

